--- a/index.html
+++ b/index.html
@@ -12,18 +12,6 @@
 <body>
 
   <main>
-    <!-- Shift the overall look and feel by adding these wonderful 
-    touches to furniture in your home
-  
-    Ever been in a room and felt like something was missing? Perhaps 
-    it felt slightly bare and uninviting. I’ve got some simple tips 
-    to help you make any room feel complete.
-  
-    Michelle Appleton
-    28 Jun 2020
-  
-    Share -->
-
     <article>
       <header>
         <picture>
@@ -46,7 +34,6 @@
           <span class="author">Michelle Appleton</span>
           <span class="dateTime">28 Jun 2020</span>
         </div>
-        <!-- <img class="search" src="./images/icon-share.svg" alt="search"> -->
         <div class="buttomSearch" onclick="compartir()">
           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
         </div>
@@ -58,19 +45,17 @@
             <img class="" src="./images/icon-twitter.svg" alt="search">
             <img class="" src="./images/icon-pinterest.svg" alt="search">
           </div>
-          <!-- <img class="searchActive" src="./images/icon-share.svg" alt="search"> -->
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg> -->
         </div>
       </footer>
     </article>
   </main>
 
-  <!-- <footer>
+  <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://marco90v.github.io/Portafolio/" target="_blank">Marco Velasquez Figarella</a>.
     </div>
-  </footer> -->
+  </footer>
 
   <script src="./script.js"></script>
 
